--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/MusicLyricIcon.webp" />
+    <link rel="icon" href="%PUBLIC_URL%/yspm.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="jesus telugu songs, verse of the day, daily verse, read bible online,telugu songs, jesus song lyrics, jesus songs, bible words, yspm ministries, yspm, church songs,jesus english songs, jesus english songs lyrics" />
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Music App</title>
+    <title>YSPM Ministries</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
