added google console verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="jesus telugu songs, verse of the day, daily verse, read bible online,telugu songs, jesus song lyrics, jesus songs, bible words, yspm ministries, yspm, church songs,jesus english songs, jesus english songs lyrics" />
+    <meta name="google-site-verification" content="dBakOkqGtItGrtUr58OEy_lt_FHPg5bTpDFEa3KWnYw" />
     <meta
       name="description"
       content="Web site created using create-react-app"
