--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/yspm.jpeg" />
+    <link rel="icon" href="%PUBLIC_URL%/YspmMainIcon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="jesus telugu songs, verse of the day, daily verse, read bible online,telugu songs, jesus song lyrics, jesus songs, bible words, yspm ministries, yspm, church songs,jesus english songs, jesus english songs lyrics" />
